--- a/public/css/style.green.css
+++ b/public/css/style.green.css
@@ -8,6 +8,7 @@
   --pagination-bg: #cde4d2;
   --link-hover-bg: #519461;
   --navbar-focus: #acd2b5;
+  --primary-post: green;
 }
 
 .clearfix:before,
