--- a/static/css/style.green.css
+++ b/static/css/style.green.css
@@ -1,6 +1,6 @@
 /* Themed colors */
 :root {
-  --primary-accent: #6aae7a;
+  --primary-accent: #4d965e;
   --navbar-border-top: #3f734b;
   --button-border: #4d8e5c;
   --link-focus: #488456;
@@ -1946,13 +1946,13 @@ fieldset[disabled] .btn-template-primary.active {
 .box-image-text .content h4 {
   text-transform: uppercase;
   line-height: 1.5;
-  color: #555555;
+  color: #000000;
   font-weight: 800;
   letter-spacing: 0.08em;
 }
 
 .box-image-text .content p {
-  color: #999999;
+  color: #000000;
 }
 
 .box-image-text:hover .bg {
@@ -2377,7 +2377,7 @@ fieldset[disabled] .btn-template-primary.active {
 
 #blog-listing-big .post .author-category,
 #blog-homepage .post .author-category {
-  color: #999999;
+  color: #000000;
   text-transform: uppercase;
   font-weight: 300;
   letter-spacing: 0.08em;
@@ -2557,7 +2557,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 .box-image-text.blog .author-category {
-  color: #999999;
+  color: #000000;
   text-transform: uppercase;
   letter-spacing: 0.08em;
   font-weight: 300;
@@ -2570,7 +2570,7 @@ fieldset[disabled] .btn-template-primary.active {
 
 .box-image-text.blog .intro {
   text-align: left;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 
 #blog-homepage .post {
