--- a/themes/hugo-universal-theme/layouts/partials/recent_posts.html
+++ b/themes/hugo-universal-theme/layouts/partials/recent_posts.html
@@ -17,8 +17,8 @@
             <div class="row">
                 {{ $posts := .Paginate (where site.RegularPages "Type" "in" site.Params.mainSections) }}
                 {{ range first 4 $posts.Pages }}
-                <div class="col-md-3 col-sm-6">
-                    <div class="box-image-text blog">
+                <div class="col-md-4 col-sm-6">
+                    <div class="box-image-text blog" style="box-shadow: 2px 2px 5px black;">
                         <div class="top">
                             <div class="image" style="overflow:hidden">
                                 {{ if isset .Params "banner" }}
