--- a/themes/hugo-universal-theme/layouts/partials/projects.html
+++ b/themes/hugo-universal-theme/layouts/partials/projects.html
@@ -24,18 +24,18 @@
                 <div aria-label="card" class="pt-4 lg:pt-6 pb-4 lg:pb-6 pl-4 lg:pl-6 pr-4 lg:pr-6">
                   <div class="flex justify-between items-center lg:items-start flex-row-reverse lg:flex-col">
                   </div>
-                  <a tabindex="0"
-                    class="focus:outline-none focus:underline focus:text-yellow-500 hover:text-yellow-500 cursor-pointer text-yellow-800 dark:text-yellow-100">
-                    <h2 class=" mt-4 mb-2 tracking-normal text-xl lg:text-2xl font-bold">Monitor Do Mercado</h2>
-                  </a>
-                  <p
-                    class="mb-6 font-normal text-gray-600 dark:text-gray-400 text-big tracking-normal w-11/12 lg:w-9/12">
-                    Antigamente, jornalistas e pessoas interessadas pelas informações do mercado financeiro tinham
-                    dificuldades em acompanhar as informações atualizadas sobre a Bovespa e as principais empresas do
-                    país. Outro problema comum era o formato das notícias, disponibilizadas em PDF ou páginas HTML. Com
-                    apoio da Linky Systens, o site Monitor do Mercado foi lançado para facilitar o acesso às informações
-                    importantes das mais diversas fontes sobre o assunto.
-                  </p>
+                  <h1 class=" mt-4 mb-2 tracking-normal text-xl lg:text-2xl font-bold">Monitor Do Mercado</h1ele>
+                    </a>
+                    <p
+                      class="mb-6 font-big text-gray-600 dark:text-gray-400 text-big tracking-normal w-11/12 lg:w-9/12">
+                    <h2>Antigamente, jornalistas e pessoas interessadas pelas informações do mercado financeiro tinham
+                      dificuldades em acompanhar as informações atualizadas sobre a Bovespa e as principais empresas do
+                      país. Outro problema comum era o formato das notícias, disponibilizadas em PDF ou páginas HTML.
+                      Com
+                      apoio da Linky Systens, o site Monitor do Mercado foi lançado para facilitar o acesso às
+                      informações
+                      importantes das mais diversas fontes sobre o assunto.</h2>
+                    </p>
                 </div>
               </div>
               <div
