--- a/themes/hugo-universal-theme/layouts/partials/features.html
+++ b/themes/hugo-universal-theme/layouts/partials/features.html
@@ -9,35 +9,43 @@
         {{ $total_rows := div (len $features) $elements }}
 
         {{ if gt (mod (len $features) $elements) 0 }}
-          {{ $total_rows = add $total_rows 1 }}
+        {{ $total_rows = add $total_rows 1 }}
         {{ end }}
 
         {{ range $i, $sequence := seq $total_rows }}
-          <div class="row row-{{ $i }} row-{{ if eq (mod $i 2) 0 }}odd{{ else }}even{{ end }}">
+        <div class="row row-{{ $i }} row-{{ if eq (mod $i 2) 0 }}odd{{ else }}even{{ end }}">
             {{ range $j, $sequence2 := (seq $elements) }}
 
-                {{ $feature_index := add (mul $i $elements) $j }}
-                {{ if lt $feature_index (len $features) }}
-                    {{ $element := index $features $feature_index }}
+            {{ $feature_index := add (mul $i $elements) $j }}
+            {{ if lt $feature_index (len $features) }}
+            {{ $element := index $features $feature_index }}
 
-                    <div class="col-md-{{ div 12 $elements }} col-{{ $j }} col-{{ if eq (mod $j 2) 0 }}odd{{ else }}even{{ end }}">
-                        <div class="box-simple">
-                            {{ with $element.url }}
-                            <a href="{{ $element.url }}">
-                            {{ end }}
-                                <div class="icon">
-                                    <i class="{{ $element.icon }}"></i>
-                                </div>
-                            {{ with $element.url }}
-                            </a>
-                            {{ end }}
-                            <h3>{{ $element.name | markdownify }}</h3>
-                            <p>{{ $element.description | markdownify }}</p>
+
+            <div
+                class="col-md-{{ div 12 $elements }} col-{{ $j }} col-{{ if eq (mod $j 2) 0 }}odd{{ else }}even{{ end }}">
+
+                <div class="box-simple">
+                    {{ with $element.url }}
+                    <a href="{{ $element.url }}">
+                        {{ end }}
+
+                        <div class="icon">
+
+                            <i class="{{ $element.icon }}"></i>
+
                         </div>
-                    </div>
-                {{ end }}
+                        {{ with $element.url }}
+                    </a>
+                    {{ end }}
+                    <h3>{{ $element.name | markdownify }}</h3>
+                    <p>{{ $element.description | markdownify }}</p>
+                </div>
+
+            </div>
+
             {{ end }}
-          </div>
+            {{ end }}
+        </div>
         {{ end }}
     </div>
 </section>
