--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -946,7 +946,7 @@ fieldset[disabled] .btn-template-primary.active {
   padding: 30px;
   margin-bottom: 0;
   position: relative;
-  background: url('../img/page-2.jpg') center center repeat;
+  background: url('../img/home-try.jpg') center center repeat;
   background-size: cover;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -1370,7 +1370,7 @@ fieldset[disabled] .btn-template-primary.active {
 
 .home-carousel {
   position: relative;
-  background: url('../img/page-2.jpg') center center repeat;
+  background: url('../img/carouselback.jpg') center center repeat;
   background-size: cover;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -1384,7 +1384,7 @@ fieldset[disabled] .btn-template-primary.active {
   width: 100%;
   height: 100%;
   background: var(--primary-accent);
-  opacity: 0.1;
+  opacity: 0.9;
   filter: alpha(opacity=90);
 }
 
@@ -2115,7 +2115,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 .bar.background-image-fixed-2 {
-  background: url('../img/home-try.jpg') center top no-repeat;
+  background: url('../img/fixed-background-2.jpg') center top no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
