--- a/public/css/style.green.css
+++ b/public/css/style.green.css
@@ -1,6 +1,6 @@
 /* Themed colors */
 :root {
-  --primary-accent: #6aae7a;
+  --primary-accent: #4d965e;
   --navbar-border-top: #3f734b;
   --button-border: #4d8e5c;
   --link-focus: #488456;
@@ -8,7 +8,6 @@
   --pagination-bg: #cde4d2;
   --link-hover-bg: #519461;
   --navbar-focus: #acd2b5;
-  --primary-post: green;
 }
 
 .clearfix:before,
@@ -274,6 +273,7 @@ ul.list-style-none {
 .features-buttons button {
   margin-bottom: 20px;
 }
+
 
 @media (min-width: 1300px) {
   body.boxed {
@@ -876,7 +876,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 #intro {
-  background: url('../img/home.jpg') no-repeat center top;
+  background: url('../img/home-try.jpg') no-repeat center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -947,7 +947,7 @@ fieldset[disabled] .btn-template-primary.active {
   padding: 30px;
   margin-bottom: 0;
   position: relative;
-  background: url('../img/page-2.jpg') center center repeat;
+  background: url('../img/photogrids.jpg') center center repeat;
   background-size: cover;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -1104,12 +1104,12 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 .panel.sidebar-menu .panel-body label {
-  color: #999999;
+  color: black;
   font-size: 12px;
 }
 
 .panel.sidebar-menu .panel-body label:hover {
-  color: #555555;
+  color: black;
 }
 
 .panel.sidebar-menu ul.nav.category-menu {
@@ -1371,7 +1371,7 @@ fieldset[disabled] .btn-template-primary.active {
 
 .home-carousel {
   position: relative;
-  background: url('../img/') center center repeat;
+  background: url('../img/photogrids2.jpg') center center repeat;
   background-size: cover;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -1385,7 +1385,7 @@ fieldset[disabled] .btn-template-primary.active {
   width: 100%;
   height: 100%;
   background: var(--primary-accent);
-  opacity: 0.3;
+  opacity: 0.8;
   filter: alpha(opacity=90);
 }
 
@@ -1947,13 +1947,13 @@ fieldset[disabled] .btn-template-primary.active {
 .box-image-text .content h4 {
   text-transform: uppercase;
   line-height: 1.5;
-  color: #555555;
+  color: #000000;
   font-weight: 800;
   letter-spacing: 0.08em;
 }
 
 .box-image-text .content p {
-  color: #999999;
+  color: #000000;
 }
 
 .box-image-text:hover .bg {
@@ -2057,7 +2057,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 #heading-breadcrumbs {
-  background: url('../img/texture-green.png') center center repeat;
+  background: url('../img/greenbackblog.jpeg') center center repeat;
   padding: 20px 0;
   margin-bottom: 40px;
 }
@@ -2067,7 +2067,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 #heading-breadcrumbs h1 {
-  color: #333333;
+  color: white;
   text-transform: uppercase;
   font-size: 30px;
   font-weight: 700;
@@ -2110,13 +2110,13 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 .bar.background-image-fixed-1 {
-  background: url('../img/page-2.jpg') center top no-repeat;
+  background: url('../img/fixed-background-1.jpg') center top no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 
 .bar.background-image-fixed-2 {
-  background: url('../img/page-2.jpg') center top no-repeat;
+  background: url('../img/seemorehome.jpg') center top no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
@@ -2378,7 +2378,7 @@ fieldset[disabled] .btn-template-primary.active {
 
 #blog-listing-big .post .author-category,
 #blog-homepage .post .author-category {
-  color: #999999;
+  color: #000000;
   text-transform: uppercase;
   font-weight: 300;
   letter-spacing: 0.08em;
@@ -2558,7 +2558,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 .box-image-text.blog .author-category {
-  color: #999999;
+  color: #000000;
   text-transform: uppercase;
   letter-spacing: 0.08em;
   font-weight: 300;
@@ -2571,7 +2571,7 @@ fieldset[disabled] .btn-template-primary.active {
 
 .box-image-text.blog .intro {
   text-align: left;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 
 #blog-homepage .post {
@@ -3001,7 +3001,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 #footer {
-  background: #555555;
+  background: #ddd;
   padding: 50px 0;
   color: #999999;
 }
@@ -4265,4 +4265,33 @@ a.list-group-item.active>.badge,
 .yamm .dropdown.yamm-fw .dropdown-menu {
   left: 15px;
   right: 15px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 99999;
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
+}
+
+.modal:target {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modal>div {
+  width: 400px;
+  position: relative;
+  margin: 10% auto;
+  padding: 15px 20px;
+  background: #fff;
 }
