--- a/themes/hugo-universal-theme/layouts/partials/footer.html
+++ b/themes/hugo-universal-theme/layouts/partials/footer.html
@@ -55,7 +55,7 @@
 
             {{ .Site.Params.address | safeHTML }}
 
-            <a href="{{ default "/contact" .Site.Params.contact_url }}" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a>
+            {{/* <a href="{{ default "/contact" .Site.Params.contact_url }}" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a> */}}
 
             <hr class="hidden-md hidden-lg hidden-sm">
 
@@ -81,10 +81,9 @@ _________________________________________________________ -->
             <p class="pull-left">{{ .Site.Params.copyright | safeHTML }}</p>
             {{ end }}
             <p class="pull-right">
-              {{ i18n "templateBy" | markdownify }} <a href="https://bootstrapious.com/p/universal-business-e-commerce-template">Bootstrapious</a>.
-              <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) -->
-
-              {{ i18n "portedBy" | markdownify }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>.
+              {{/* {{ i18n "templateBy" | markdownify }} <a href="https://bootstrapious.com/p/universal-business-e-commerce-template">Bootstrapious</a>. */}}
+              {{/* <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) --> */}}
+              {{/* {{ i18n "portedBy" | markdownify }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>. */}}
             </p>
         </div>
     </div>
