--- a/themes/hugo-universal-theme/layouts/partials/footer.html
+++ b/themes/hugo-universal-theme/layouts/partials/footer.html
@@ -1,93 +1,55 @@
-<footer id="footer">
-    <div class="container">
-
-        <div class="col-md-4 col-sm-6">
-            <img src="{{ .Site.Params.logo_footer | relURL }}" alt="{{ .Title }} logo"/>
-        </div>
-
-        {{ if isset .Site.Params "about_us" }}
-        <div class="col-md-4 col-sm-6">
-            <h4>{{ i18n "aboutUs" }}</h4>
-
-            {{ .Site.Params.about_us | safeHTML }}
-
-            <hr class="hidden-md hidden-lg hidden-sm">
-
-        </div>
-        <!-- /.col-md-4 -->
-        {{ end }}
-
-        <!-- A list with recents posts projects -->
-        <!-- <div class="col-md-4 col-sm-6">
-
-            {{ if isset .Site.Params "recent_posts" }}{{ if (default true .Site.Params.footer.recent_posts.enable) }}
-            <h4>{{ i18n "recentPosts" }}</h4>
-
-            <div class="blog-entries">
-                {{ range first 3 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-                <div class="item same-height-row clearfix">
-                    <div class="image same-height-always">
-                        <a href="{{ .Permalink }}">
-                          {{ if isset .Params "banner" }}
-                            <img src="{{ .Params.banner | relURL }}" class="img-responsive" alt="{{ .Title }}">
-                          {{ else }}
-                            <img src="{{ "img/placeholder.png" | relURL }}" class="img-responsive" alt="{{ .Title }}">
-                          {{ end }}
-                        </a>
-                    </div>
-                    <div class="name same-height-always">
-                        <h5><a href="{{ .Permalink }}">{{ .Title }}</a></h5>
-                    </div>
-                </div>
-                {{ end }}
-            </div>
-
-            <hr class="hidden-md hidden-lg">
-            {{ end }}{{ end }}
-
-        </div> -->
-        <!-- /.col-md-4 -->
-
-        {{ if isset .Site.Params "address" }}
-        <div class="col-md-4 col-sm-6">
-
-          <h4>{{ i18n "contactTitle" }}</h4>
-
-            {{ .Site.Params.address | safeHTML }}
-
-            {{/* <a href="{{ default "/contact" .Site.Params.contact_url }}" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a> */}}
-
-            <hr class="hidden-md hidden-lg hidden-sm">
-
-        </div>
-        <!-- /.col-md-4 -->
-        {{ end }}
-
+<footer id="site-footer" class="site-footer footer-v2">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <img src="images/logo-light.png" alt="">
+      </div>
     </div>
-    <!-- /.container -->
+    <div class="space-60"></div>
+    <div class="row justify-content-center">
+      <div class="col-md-4 col-sm-6">
+        <div class="contact-info box-style2 ft-contact-info">
+          <div class="box-icon"><i class="flaticon-envelope"></i></div>
+          <p>contato@linkysystems.com</p>
+          <h6>E-mail</h6>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="contact-info box-style2 ft-contact-info">
+          <div class="box-icon"><i class="flaticon-phone-1"></i></div>
+          <p>+55 21 960205871</p>
+          <h6>WhatsApp</h6>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="contact-info box-style2 ft-contact-info">
+          <div class="box-icon"><i class="flaticon-world-globe"></i></div>
+          <p>26.723.048/0001-11</p>
+          <h6>CNPJ</h6>
+        </div>
+      </div>
+    </div>
+    <div class="space-65"></div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <div class="footer-menu">
+          <ul>
+            <li><a href="/">Início</a></li>
+            <li><a href="/portfolio">Portfólio</a></li>
+            <li><a href="/servicos">Serviços</a></li>
+            <li><a href="/projetos">Projetos</a></li>
+            <li><a href="/contato">Contatos</a></li>
+          </ul>
+        </div>
+        <div class="space-20"></div>
+        <p class="copyright-text v2">Copyright (c) Since 2016, Linky Systems; all rights reserved.<br>
+          Linky Desenvolvimento e instalação de software. - ME</p>
+        <div class="space-26"></div>
+        <div class="ft-list-icon">
+          <a class="linkedin" href="https://www.linkedin.com/company/linky-systems"><i class="fab fa-linkedin-in"></i></a>
+          <a class="github" href="https://github.com/linkysystems"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
-
-<!-- /#footer -->
-
-<!-- *** FOOTER END *** -->
-
-<!-- *** COPYRIGHT ***
-_________________________________________________________ -->
-
-<div id="copyright">
-    <div class="container">
-        <div class="col-md-12">
-            {{ if isset .Site.Params "copyright" }}
-            <p class="pull-left">{{ .Site.Params.copyright | safeHTML }}</p>
-            {{ end }}
-            <p class="pull-right">
-              {{/* {{ i18n "templateBy" | markdownify }} <a href="https://bootstrapious.com/p/universal-business-e-commerce-template">Bootstrapious</a>. */}}
-              {{/* <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) --> */}}
-              {{/* {{ i18n "portedBy" | markdownify }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>. */}}
-            </p>
-        </div>
-    </div>
-</div>
-<!-- /#copyright -->
-
-<!-- *** COPYRIGHT END *** -->
