--- a/themes/hugo-universal-theme/layouts/partials/headers.html
+++ b/themes/hugo-universal-theme/layouts/partials/headers.html
@@ -1,7 +1,6 @@
 <meta charset="utf-8">
 <meta name="robots" content="all,follow">
-<meta name="googlebot" content="index,follow,snippet,archive">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
 {{ $title_plain := .Title | markdownify | plainify }}
 <title>{{ $title_plain }}</title>
 <meta name="author" content="{{ .Param "author" }}" />
@@ -16,45 +15,20 @@
 
 {{ hugo.Generator }}
 
-<!-- Font -->
-<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet' type='text/css'>
+<meta name="googlebot" content="index,follow,snippet,archive">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<link rel="stylesheet" href='{{ "css/bootstrap.min.css" | relURL }}' />
+<link rel="stylesheet" href='{{ "css/font-awesome.min.css" | relURL }}' />
+<link rel="stylesheet" href='{{ "css/flaticon.css" | relURL }}' />
+<link rel="stylesheet" href='{{ "css/owl.carousel.min.css" | relURL }}' />
+<link rel="stylesheet" href='{{ "css/owl.theme.css" | relURL }}' />
+<link rel="stylesheet" href='{{ "css/magnific-popup.css" | relURL }}' />
 
-<!-- Bootstrap and Font Awesome CSS -->
-<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.11.2/css/all.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- CSS animations  -->
-<link href="{{ "css/animate.css" | relURL }}" rel="stylesheet">
-
-<!-- Theme stylesheet, if possible do not edit this stylesheet -->
-{{ with .Site.Params.style }}
-  <link href="{{ "css/style" | relURL }}.{{ . }}.css" rel="stylesheet" id="theme-stylesheet">
-{{ else }}
-  <link href="{{ "css/style.default.css" | relURL }}" rel="stylesheet" id="theme-stylesheet">
-{{ end }}
-
-<!-- Custom stylesheet - for your changes -->
-<link href="{{ "css/custom.css" | relURL }}?{{ now.Unix }}" rel="stylesheet">
-
-<!-- Responsivity for older IE -->
-{{ `
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-` | safeHTML }}
-
-<!-- Favicon and Apple touch icons-->
+<link rel="stylesheet" href='{{ "css/style.css" | relURL }}' />
+<link rel="stylesheet" href='{{ "css/royal-preload.css" | relURL }}' />
 <link rel="shortcut icon" href="{{ "img/favicon.ico" | relURL }}" type="image/x-icon" />
-<link rel="apple-touch-icon" href="{{ "img/apple-touch-icon.png" | relURL }}" />
-
-<!-- owl carousel CSS -->
-<link href="{{ "css/owl.carousel.css" | relURL }}" rel="stylesheet">
-<link href="{{ "css/owl.theme.css" | relURL }}" rel="stylesheet">
-
-<!-- RSS feed -->
 <link rel="alternate" href="{{ "/index.xml" | absURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
-
 <!-- Facebook OpenGraph tags -->
 {{ $is_blog := and (eq .Type "blog") (eq .Kind "page") }}
 {{ $has_image :=  isset .Params "banner" }}
