--- a/themes/hugo-universal-theme/layouts/partials/scripts.html
+++ b/themes/hugo-universal-theme/layouts/partials/scripts.html
@@ -1,21 +1,27 @@
 {{ template "_internal/google_analytics.html" . }}
-<script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0/jquery.counterup.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-parallax/1.1.3/jquery-parallax.js"></script>
-{{ if and .Site.Params.enableGoogleMaps .Site.Params.googleMapsApiKey }}
-<script src="//maps.googleapis.com/maps/api/js?key={{.Site.Params.googleMapsApiKey}}&v=3.exp"></script>
-<script src="{{ "js/hpneo.gmaps.js" | relURL }}"></script>
-<script src="{{ "js/gmaps.init.js" | relURL }}"></script>
-{{ end }}
-{{ if and .Site.Params.enableRecaptchaInContactForm .Site.Params.googleRecaptchaKey }}
-<script src="//www.google.com/recaptcha/api.js" async defer></script>
-{{ end }}
-<script src="{{ "js/front.js" | relURL }}"></script>
-
-<!-- owl carousel -->
-<script src="{{ "js/owl.carousel.min.js" | relURL }}"></script>
-
+<a id="back-to-top" href="#" class="show"><i class="flaticon-up-arrow"></i></a>
+<!-- jQuery -->
+<script src='{{ "js/jquery.min.js" | relURL }}'></script>
+<script src='{{ "js/jquery.magnific-popup.min.js" | relURL }}'></script>
+<script src='{{ "js/jquery.isotope.min.js" | relURL }}'></script>
+<script src='{{ "js/owl.carousel.min.js" | relURL }}'></script>
+<script src='{{ "js/easypiechart.min.js" | relURL }}'></script>
+<script src='{{ "js/jquery.countdown.min.js" | relURL }}'></script>
+<script src='{{ "js/scripts.js" | relURL }}'></script>
+<script src='{{ "js/header-mobile.js" | relURL }}'></script>
+<script src='{{ "js/royal_preloader.min.js" | relURL }}'></script>
+<script>
+    window.jQuery = window.$ = jQuery;
+    (function($) { "use strict";
+        //Preloader
+        Royal_Preloader.config({
+            mode           : 'logo',
+            logo           : '{{ "images/logo.png" | relURL }}',
+            logo_size      : [160, 75],
+            showProgress   : true,
+            showPercentage : true,
+            text_colour: '#000000',
+            background:  '#ffffff'
+        });
+    })(jQuery);
+</script>
