Change theme and add first contents

--- a/themes/hugo-universal-theme/layouts/partials/footer.html
+++ b/themes/hugo-universal-theme/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <img src="images/logo-light.png" alt="">
+        <img style="display: inline-block;" src="/img/logo_footer.png" alt="Linky Systems">
       </div>
     </div>
     <div class="space-60"></div>
@@ -35,7 +35,7 @@
         <div class="footer-menu">
           <ul>
             <li><a href="/">Início</a></li>
-            <li><a href="/portfolio">Portfólio</a></li>
+            <li><a href="/portifolio">Portfólio</a></li>
             <li><a href="/servicos">Serviços</a></li>
             <li><a href="/projetos">Projetos</a></li>
             <li><a href="/contato">Contatos</a></li>
@@ -53,3 +53,5 @@
     </div>
   </div>
 </footer>
+<div class="contact-floating">
+  <a href="{{ .Site.Params.whatsappLink }}" target="_blank"><img src="/images/whatsapp-icon.svg"></a></div>
