--- a/themes/hugo-universal-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-universal-theme/layouts/partials/sidebar.html
@@ -1,5 +1,6 @@
+
 {{ partial "widgets/search.html" . }}
 
 {{ partial "widgets/categories.html" . }}
 
-{{ partial "widgets/tags.html" . }}
+<!-- {{ partial "widgets/tags.html" . }} -->
