--- a/themes/hugo-universal-theme/layouts/partials/contact.html
+++ b/themes/hugo-universal-theme/layouts/partials/contact.html
@@ -1,78 +1,47 @@
-<div class="container" id="contact">
-
-    <div class="row">
-        <div class="col-md-8">
-
-            <section>
-
-                {{ .Content }}
-
-                {{ if isset .Site.Params "formspree_action" }}
-
-                <div class="heading">
-                  <h3>{{ i18n "contactForm" }}</h3>
-                </div>
-
-                <div id="contact-message"></div>
-
-                <form {{ with .Site.Params.contact_form_ajax }}class="contact-form-ajax"{{ else }}{{ end }} method="post" action="{{ .Site.Params.formspree_action }}">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                              <label for="name">{{ i18n "contactName" }}</label>
-                                <input type="text" class="form-control" name="name" id="name" required>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                <label for="email">{{ i18n "contactMail" }}</label>
-                                <input type="email" autocomplete="email" class="form-control" name="email" id="email" required>
-                            </div>
-                        </div>
-                        <div class="col-sm-12">
-                            <div class="form-group">
-                              <label for="message">{{ i18n "contactMessage" }}</label>
-                                <textarea id="message" class="form-control" name="message" required></textarea>
-                            </div>
-                        </div>
-                        {{ if and .Site.Params.enableRecaptchaInContactForm .Site.Params.googleRecaptchaKey }}
-                        <div class="col-sm-12">
-                            <div class="g-recaptcha" data-sitekey="{{ .Site.Params.googleRecaptchaKey }}"></div>
-                            <br/>
-                        </div>
-                        {{ end }}
-
-                        <div class="col-sm-12 text-center">
-                          <button type="submit" class="btn btn-template-main"><i class="far fa-envelope"></i>{{ i18n "contactSend" }}</button>
-
-                        </div>
-                    </div>
-                    <!-- /.row -->
-                </form>
-
-                {{ end }}
-
-            </section>
-
+<div id="content" class="site-content">
+    <div class="page-header flex-middle">
+        <div class="container">
+            <div class="inner flex-middle">
+                <h1 class="page-title">Contato</h1>
+                <ul id="breadcrumbs" class="breadcrumbs none-style">
+                    <li><a href="/">Início</a></li>
+                    <li class="active">Contato</li>
+                </ul>
+            </div>
         </div>
-
-        <div class="col-md-4">
-
-            {{ if isset .Site.Params "address" }}
-            <section>
-
-              <h3 class="text-uppercase"> {{ i18n "contactAddrTitle" }}</h3>
-
-                {{ .Site.Params.address | safeHTML }}
-
-            </section>
-
-            {{ end }}
-
-        </div>
-
     </div>
-    <!-- /.row -->
+    <section class="contact-page">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="contact-left">
+                        <div class="ot-heading">
+                            <span>// Dados de contato</span>
+                            <!-- <h2 class="main-heading">Contatos</h2> -->
+                        </div>
+                        <div class="space-5"></div>
+                        <p>Teremos o maior prazer em responder todas às suas perguntas.</p>
+                        <a href="{{ .Site.Params.whatsappLink }}">
+                        <div class="contact-info box-style1">
+                            <i class="flaticon-phone-1"></i>
+                            <div class="info-text">
+                                <h6>Whatsapp:</h6>
+                                <p>+55 21 960205871</p>
+                            </div>
+                        </div>
+                        </a>
+                        <a href="mailto:contato@linkysystems.com">
+                        <div class="contact-info box-style1">
+                            <i class="flaticon-envelope"></i>
+                            <div class="info-text">
+                                <h6>E-mail:</h6>
+                                <p>contato@linkysystems.com</p>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
-
-{{ partial "map.html" . }}
