--- a/themes/hugo-universal-theme/layouts/partials/home-header.html
+++ b/themes/hugo-universal-theme/layouts/partials/home-header.html
@@ -34,20 +34,52 @@
             <div class="octf-col logo-col">
               <div id="site-logo" class="site-logo">
                 <a href="/">
-                  <img src="/img/logoo.png" alt="Linky Systems" class="">
+                  <img src="/img/logoo.png" alt="Linky Systems">
                 </a>
               </div>
             </div>
             <div class="octf-col menu-col">
               <nav id="site-navigation" class="main-navigation">
                 <ul class="menu">
-                  <li class="current-menu-item current-menu-ancestor">
-                    <a href="/">Início</a>
-                  </li>
-                  <li><a href="/portfolio">Portfólio</a></li>
-                  <li><a href="/servicos">Serviços</a></li>
-                  <li><a href="/projetos">Projetos</a></li>
-                  <li><a href="/contato">Contatos</a></li>
+                  {{ $current := . }}
+
+                  {{ range .Site.Menus.main.ByWeight }}
+                    {{ $topLevel := replace .URL "/" "" }}
+                    {{ $active := "" }}
+
+                    {{ if eq $current.RelPermalink .URL }}
+                      {{ $active = "active" }}
+                    {{ end }}
+
+                    {{ if eq $current.Type $topLevel }}
+                      {{ $active = "current-menu-item current-menu-ancestor" }}
+                    {{ end }}
+
+                    {{ if and (or (eq $current.RelPermalink .URL) (eq "term" $current.Kind)) (in (slice "page" "term") $current.Kind) }}
+                      {{ range (split .URL "/") }}
+                        {{ if eq "blog" . }}
+                          {{ $active = "active" }}
+                        {{ end }}
+                      {{ end }}
+                    {{ end }}
+
+                    {{ if .HasChildren }}
+                      <!-- Check if the first child marks a menu section identifier -->
+                      {{ $hasSections := (hasPrefix (index .Children 0).Identifier "section.") }}
+                      <li class="menu-item-has-children {{ $active }}">
+                          <a href="{{ .URL }}">{{ .Name }}</a>
+                          <ul class="sub-menu">
+                              {{ range .Children.ByWeight }}
+                              <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+                              {{ end }}
+                          </ul>
+                      </li>
+                    {{ else }}
+                    <li class="{{ $active }}">
+                      <a href="{{ .URL }}">{{ .Name }}</a>
+                    </li>
+                    {{ end }}
+                  {{ end }}
                 </ul>
               </nav>
             </div>
@@ -76,12 +108,13 @@
       </div>
     </div>
   </div>
+
   <div class="header_mobile">
     <div class="container">
       <div class="mlogo_wrapper clearfix">
         <div class="mobile_logo">
           <a href="/">
-            <img src="images/logo.svg" alt="Engitech">
+            <img src="/img/logoo.png" alt="Linky Systems">
           </a>
         </div>
         <div id="mmenu_toggle">
@@ -91,83 +124,43 @@
       <div class="mmenu_wrapper">
         <div class="mobile_nav collapse">
           <ul id="menu-main-menu" class="mobile_mainmenu">
-            <li class="menu-item-has-children current-menu-item current-menu-ancestor">
-              <a href="/">Home</a>
-              <ul class="sub-menu">
-                <li><a href="/">Home 1</a></li>
-                <li class="current-menu-item"><a href="index-2.html">Home 2</a></li>
-                <li><a href="index-3.html">Home 3</a></li>
-                <li><a href="index-4.html">Home 4</a></li>
-                <li><a href="index-5.html">Home 5</a></li>
-                <li><a href="index-6.html">Home 6</a></li>
-                <li><a href="index-7.html">Home 7</a></li>
-                <li><a href="index-8.html">Home 8</a></li>
-                <li><a href="index-9.html">Home 9</a></li>
-                <li><a href="index-10.html">Home 10</a></li>
-                <li><a href="index-11.html">Home 11</a></li>
-                <li><a href="index-12.html">Home 12</a></li>
-                <li><a href="index-13.html">Home 13</a></li>
-                <li><a href="index-14.html">Home 14</a></li>
-                <li><a href="index-15.html">Home 15</a></li>
-                <li><a href="index-16.html">Home 16</a></li>
-              </ul>
-            </li>
-            <li class="menu-item-has-children"><a href="#">Company</a>
-              <ul class="sub-menu">
-                <li><a href="about-us.html">About us</a></li>
-                <li><a href="why-choose-us.html">Why Choose Us</a></li>
-                <li><a href="our-team.html">Our team</a></li>
-                <li><a href="single-team.html">Single team</a></li>
-                <li class="menu-item-has-children"><a href="shop.html">Shop</a>
-                  <ul class="sub-menu">
-                    <li><a href="single-product.html">Single Product</a></li>
-                    <li><a href="checkout-page.html">Checkout Page</a></li>
-                    <li><a href="cart-page.html">Cart Page</a></li>
-                  </ul>
+            {{ $current := . }}
+            {{ range .Site.Menus.main.ByWeight }}
+              {{ $topLevel := replace .URL "/" "" }}
+              {{ $active := "" }}
+
+              {{ if eq $current.RelPermalink .URL }}
+                {{ $active = "active" }}
+              {{ end }}
+
+              {{ if eq $current.Type $topLevel }}
+                {{ $active = "current-menu-item current-menu-ancestor" }}
+              {{ end }}
+
+              {{ if and (or (eq $current.RelPermalink .URL) (eq "term" $current.Kind)) (in (slice "page" "term") $current.Kind) }}
+                {{ range (split .URL "/") }}
+                  {{ if eq "blog" . }}
+                    {{ $active = "active" }}
+                  {{ end }}
+                {{ end }}
+              {{ end }}
+
+              {{ if .HasChildren }}
+                {{ $hasSections := (hasPrefix (index .Children 0).Identifier "section.") }}
+                <li class="menu-item-has-children {{ $active }}">
+                    <a href="{{ .URL }}">{{ .Name }}</a>
+                    <ul class="sub-menu">
+                        {{ range .Children.ByWeight }}
+                        <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+                        {{ end }}
+                    </ul>
                 </li>
-                <li><a href="typography.html">Typography</a></li>
-                <li><a href="elements.html">Elements</a></li>
-                <li><a href="faq.html">FAQS</a></li>
-                <li><a href="404-error.html">404 Error</a></li>
-                <li><a href="cooming-soon.html">Coming Soon</a></li>
-              </ul>
-            </li>
-            <li class="menu-item-has-children"><a href="#">Services</a>
-              <ul class="sub-menu">
-                <li><a href="it-services.html">It Services</a></li>
-                <li><a href="web-development.html">Web Development</a></li>
-                <li><a href="mobile-development.html">Mobile Development</a></li>
-              </ul>
-            </li>
-            <li class="menu-item-has-children"><a href="#">Projects</a>
-              <ul class="sub-menu">
-                <li><a href="portfolio-masonry.html">Portfolio Masonry</a></li>
-                <li><a href="portfolio-carousel.html">Portfolio Carousel</a></li>
-                <li class="menu-item-has-children"><a href="portfolio-grid.html">Portfolio Grid</a>
-                  <ul class="sub-menu">
-                    <li><a href="portfolio-grid.html">Portfolio 3 Columns</a></li>
-                    <li><a href="portfolio-4-column.html">Portfolio 4 Columns</a></li>
-                    <li><a href="portfolio-no-gap.html">Portfolio No Gap</a></li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children"><a href="portfolio-details-1.html">Portfolio
-                    Details</a>
-                  <ul class="sub-menu">
-                    <li><a href="portfolio-details-1.html">Single Layout 1</a></li>
-                    <li><a href="portfolio-details-2.html">Single Layout 2</a></li>
-                    <li><a href="portfolio-details-3.html">Single Layout 3</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            <li class="menu-item-has-children"><a href="blog.html">Blog</a>
-              <ul class="sub-menu">
-                <li><a href="blog.html">Blog Listing</a></li>
-                <li><a href="blog-grid.html">Blog Grid</a></li>
-                <li><a href="post.html">Blog Single</a></li>
-              </ul>
-            </li>
-            <li><a href="contact.html">Contacts</a></li>
+              {{ else }}
+              <li class="{{ $active }}">
+                <a href="{{ .URL }}">{{ .Name }}</a>
+              </li>
+              {{ end }}
+            {{ end }}
           </ul>
         </div>
       </div>
