--- a/themes/hugo-universal-theme/layouts/partials/top.html
+++ b/themes/hugo-universal-theme/layouts/partials/top.html
@@ -1,20 +1,18 @@
 {{ if .Site.Params.topbar.enable }}
-<header>
-  <div id="top">
-    <div class="container">
+<section class="home2-top">
+  <div class="container">
       <div class="row">
-        <div class="col-xs-5">
-          {{ .Site.Params.topbar.text | safeHTML }}
-        </div>
-        <div class="col-xs-7">
-          <div class="social">
-            {{ range .Site.Menus.topbar.ByWeight }}
-            <a href="{{ .URL | safeURL }}" target="_blank" style="opacity: 1;">{{ .Pre }}</a>
-            {{ end }}
+          <div class="col-lg-6 text-center text-lg-left mb-4 mb-lg-0">
+              <img src="/images/big-logo-home2.png" alt="">
           </div>
-        </div>
+          <div class="col-lg-6 align-self-center">
+              <div class="home2-top-right">
+                  <p class="small-text">// Qualidade, Usabilidade e Desempenho</p>
+                  <h2>SOLUÇÕES TECNOLÓGICAS</h2>
+                  <p class="sub-text">Transformamos negócios dos principais setores com soluções digitais poderosas e adaptáveis que satisfazem as necessidades atuais.</p>
+              </div>
+          </div>
       </div>
-    </div>
   </div>
-</header>
+</section>
 {{ end }}
