--- a/themes/hugo-universal-theme/layouts/partials/widgets/categories.html
+++ b/themes/hugo-universal-theme/layouts/partials/widgets/categories.html
@@ -1,24 +1,17 @@
 {{ if .Site.Params.widgets.categories }}
 {{ if isset .Site.Taxonomies "categories" }}
 {{ if not (eq (len .Site.Taxonomies.categories) 0) }}
-<div class="panel panel-default sidebar-menu">
-
-    <div class="panel-heading">
-        <h3 class="panel-title">{{ i18n "categoriesTitle" }}</h3>
-    </div>
-
-    <div class="panel-body">
-        <ul class="nav nav-pills nav-stacked">
-            {{ $current := . }}
-            {{ range $name, $items := .Site.Taxonomies.categories }}
-            <li{{ if eq $current.RelPermalink ($name | urlize | lower | printf "/categories/%s/") }} class="active"{{ end }}>
-                <a href="{{ "categories/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | upper }} ({{ len $items }})</a>
+<aside class="widget widget_categories">
+    <h5 class="widget-title">{{ i18n "categoriesTitle" }}</h5>
+    <ul>
+        {{ $current := . }}
+        {{ range $name, $items := .Site.Taxonomies.categories }}
+            <li>
+                <a class="{{ if eq $current.RelPermalink ($name | urlize | lower | printf "/categories/%s/") }}active{{ end }}" href="#">{{ $name | upper }}"</a> <span class="posts-count">({{ len $items }})</span>
             </li>
-            {{ end }}
-        </ul>
-    </div>
-
-</div>
+        {{ end }}
+    </ul>
+</aside>
 {{ end }}
 {{ end }}
 {{ end }}
